# nvcl-geopackager

./: .editorconfig  .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
geopackager/: create_geopackage.py  geopackager.ipynb  update_geoserver.py
test_data/: example_tsgexport.CSV
tests/: test_create_geopackage.py  test_update_geoserver.py
