[tool.poetry]
name = "nvcl-geopackager"
version = "0.0.1"
description = "A python project to assist with the creation and distribution of geopackage files to assist with geospatial searching."
authors = ["John Hille <john.hille@csiro.au>"]
license = "CSIRO"

[tool.poetry.dependencies]
python = "^3.8,<3.10"
requests = "^2.25.1"
loguru = "*"
python-dotenv = "*"
numpy = "^1.19.1"
toml = "*"
fiona = [
   { platform = 'linux', version = "*" },
]
gdal = [
   { platform = 'linux', version = "3.2.1" },
]
geopandas = [
   { platform = 'linux', version = "*" },
]
pydantic = "*"
pyproj = [
   { version = "*", platform = 'linux' },
]
rasterio = [
   { platform = 'linux', version = "*" },
]
shapely = [
   { version = "*", platform = 'linux' },
]
cartopy = [
   { version = "0.19.0.post1", platform = 'linux' },
]
ipywidgets = "^7.6.3"
panel = "^0.11.3"
jupyterlab = "^3.0.16"
nodejs = "^0.1.1"
geoviews = "^1.9.1"
scipy = "^1.6.3"
descartes = "^1.1.0"
splot = "^1.1.3"
hvplot = "^0.7.2"
ipython = "^7.24.1"


[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.2.3"
autoflake = "^1.4"
flake8 = "^3.9.0"
mypy = "^0.812"
pylint = "^2.7.4"
pytest-cov = "^2.11.1"

[tool.black]
line_length = 120
target_version = ['py38']

[tool.poetry2conda]
name = "nvcl-geopackager"

[tool.pylint.FORMAT]
output_format = "colorized"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--quiet --color=auto"
norecursedirs = ".git dist build .tox *.egg-info"
testpaths = [
    "tests",
]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
